	  Patch #27334 by Roger Pack.
	* lib/rubygems/server.rb:  Handle --bind option.  Patch #27357 by
	  Bruno Michel.
	* lib/rubygems/doc_manager:  gem rdoc --overwrite to preserve built
	  rdoc.  Patch #25982 by Akinori MUSHA.
	* lib/rubygems/commands/which_command.rb:  Fail if no paths were
	  found.  Adapted patch #27681 by Caio Chassot.

2010-02-01  John Barnette  <jbarnette@rubygems.org>

	* lib/rubygems/command*: Add 'gem push' and 'gem owner' for
	  interacting with modern/Gemcutter sources [Nick Quaranto]

2010-01-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_list.rb:  Ignore development dependencies
	  unless explicitly needed.  Bug #27608 by Roger Pack.

2010-01-12  John Barnette <jbarnette@rubygems.org>

	* Rakefile: Don't add development deps when building the
	rubygems-update gem, it borks older versions when they're updating
	from a stub index.

2009-12-22  Evan Phoenix  <evan@fallingsnow.net>

	* lib/rubygems/spec_fetcher.rb: Don't bother re-Marshaling
	the spec YAML list.

2009-11-04  John Barnette  <jbarnette@rubygems.org>

	* lib/rubygems/timer.rb: Removed. The deprecation sun set in July.

2009-10-14  John Barnette  <jbarnette@rubygems.org>

	* lib/rubygems/dependency.rb: Burndown/cleanup. Refactored code
	and tests. Gem::Dependency.version_requirement(s) is deprecated in
	favor of Gem::Dependency.requirement.

	* lib/rubygems/requirement.rb: Burndown/cleanup. Refactored code
	and tests. See test/support/shortcuts.rb for some new test helpers.

2009-10-13  John Barnette  <jbarnette@rubygems.org>

	* lib/rubygems/local_remote_options.rb: Make --source additive,
	not exclusive. If exclusive sources are desired, use
	--clear-sources first.

2009-09-29  John Barnette  <jbarnette@rubyforge.org>

	* lib/rubygems/spec_fetcher.rb: Be slightly more robust when faced
	with corrupted indexes.

2009-09-03  John Barnette  <jbarnette@rubyforge.org>

	* LOTS: Use "raise" consistently, not "fail".
